<resources>
    <string name="app_name">PetrolNavigatorApp</string>
    <string name="main_page">Strona główna</string>
    <string name="station_map">Mapa stacji</string>
    <string name="station_list">Lista stacji</string>
    <string name="vehicles">Moje pojazdy</string>
    <string name="setting">Ustawienia wstępne</string>
    <string name="radius_choice">Wybierz promień wyszukiwania stacji paliw.</string>
    <string name="currentRadius">Promień wyszukiwania:</string>
    <string name="confirmButton">Potwierdź</string>
    <string name="title_activity_maps">Map</string>
    <string name="google_places_key">AIzaSyB1yvvhSeE46w2jkAm8AJ7F5UA3JqkIanM</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string-array name="fractions">
        <item>1/8</item>
        <item>2/8</item>
        <item>3/8</item>
        <item>4/8</item>
        <item>5/8</item>
        <item>6/8</item>
        <item>7/8</item>
        <item>8/8</item>
    </string-array>
    <string-array name="fuelTypes">
        <item>Wszystko</item>
        <item>Benzyna</item>
        <item>Diesel</item>
        <item>LPG</item>
        <item>Etanol</item>
        <item>Elektryczny</item>
        <item>CNG</item>
    </string-array>
    <string-array name="Benzyna">
        <item>Wszystko</item>
        <item>Pb95</item>
        <item>Pb98</item>
    </string-array>
    <string-array name="Diesel">
        <item>Wszystko</item>
        <item>ON</item>
        <item>ON+</item>
    </string-array>
    <string-array name="LPG">
        <item>Wszystko</item>
        <item>LPG</item>
    </string-array>
    <string-array name="Etanol">
        <item>Wszystko</item>
        <item>E85</item>
    </string-array>
    <string-array name="Elektryczny">
        <item>Wszystko</item>
        <item>Elektryczny</item>
    </string-array>
    <string-array name="CNG">
        <item>Wszystko</item>
        <item>CNG</item>
    </string-array>
</resources>