<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
    <item
        android:id="@+id/db"
        android:title="@string/main_page"
        android:icon="@drawable/ic_baseline_home_24"/>
    <item
        android:id="@+id/maps"
        android:title="@string/station_map"
        android:icon="@drawable/ic_baseline_map_24"/>
    <item
        android:id="@+id/list"
        android:title="@string/station_list"
        android:icon="@drawable/ic_baseline_arrow_drop_down_circle_24"/>
    <item
        android:id="@+id/activities"
        android:title="@string/vehicles"
        android:icon="@drawable/ic_baseline_directions_car_24"/>
    <item
        android:id="@+id/settings"
        android:title="@string/setting"
        android:icon="@drawable/ic_baseline_settings_24"/>
    </group>
    <item android:title="Pozostałe">
        <menu>
            <item
                android:id="@+id/logout"
                android:title="Wyloguj"/>
        </menu>
    </item>
</menu>